<resources>
    <string name="app_name">Hadith Pro</string>
    <!-- Intro -->
    <string name="intro_books">Hadith Books</string>
    <string name="intro_grades">Hadith Grades</string>
    <string name="intro_issues">Known Issues</string>
    <string name="intro_translation">Hadith Translation</string>
    <string name="intro_skip">Skip</string>
    <string name="intro_next">Next</string>
    <string name="intro_getstarted">Get Started</string>
    <string name="intro_issues1">Some mistakes in Zubair Ali Zai Grades</string>
    <string name="intro_issues2">Some Ahadith are missing in English</string>

    <!-- Title -->
    <string name="title_book">Books</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_random">Random Hadith</string>
    <string name="title_rate">Rate our app</string>
    <string name="title_reference">Reference</string>
    <string name="title_moreapps">More apps</string>
    <string name="title_contribute">How to contribute</string>
    <string name="title_source">Source code</string>
    <string name="title_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_menu">Menu</string>
    <string name="menu_others">Others</string>

    <!-- Book Fragment -->
    <!-- Books -->
    <string name="bukhari_book">Sahih Bukhari</string>
    <string name="muslim_book">Sahih Muslim</string>
    <string name="nasai_book">Sunan an-Nasa\'i</string>
    <string name="abudawud_book">Sunan Abi Dawud</string>
    <string name="tirmidhi_book">Jami` at-Tirmidhi</string>
    <string name="ibnmajah_book">Sunan Ibn Majah</string>
    <string name="malik_book">Muwatta Malik</string>

    <!-- Book Author -->
    <string name="by_author">By:</string>
    <string name="bukhari_author">Imam al-Bukhari</string>
    <string name="muslim_author">Imam Muslim</string>
    <string name="nasai_author">Imam an-Nasa\'i</string>
    <string name="abudawud_author">Imam Abu Dawud</string>
    <string name="tirmidhi_author">Imam at-Tirmidhi</string>
    <string name="ibnmajah_author">Imam Ibn Majah</string>
    <string name="malik_author">Imam Malik</string>


    <!-- Section Fragment -->
    <!-- Search -->
    <string name="search_hint">Search chapter</string>

    <!-- Hadith Fragment -->
    <!-- Reference -->
    <string name="chapterText">Chapter</string>
    <string name="reference">Reference</string>
    <string name="reference_book">In-book reference</string>

    <!-- Copy -->
    <!-- Bottomsheet -->
    <string name="bottomsheet_copy_header">Copy options</string>
    <string name="bottomsheet_copy_hadith_arabic">Hadith in Arabic</string>
    <string name="bottomsheet_copy_hadith_translated">Hadith in translated language</string>
    <string name="bottomsheet_copy_hadith_grades">Hadith Grades</string>
    <string name="bottomsheet_copy_hadith_reference">Reference</string>
    <string name="bottomsheet_copy_button">Copy</string>

    <!-- Copy message -->
    <string name="message_copy_success">Copied successfully</string>
    <string name="message_copy_error">Nothing copied</string>

    <!-- Copy text -->
    <string name="copyright">Copied from Hadith Pro (Download our app from https://github.com/unkn4wn/hadith-pro/releases/tag/Latest)</string>

    <!-- Bookmark -->
    <!-- Bookmark message -->
    <string name="message_bookmark_add">Added Successfully!</string>
    <string name="message_bookmark_remove">Removed Successfully!</string>
    <string name="message_bookmark_add_error">Failed to Add</string>
    <string name="message_bookmark_remove_error">Failed to Remove</string>

    <!-- Random Hadith -->
    <!-- RefreshCardview -->
    <string name="random_cardview_hadith">Show me an Hadith</string>
    <string name="random_cardview_anotherhadith">Show me another Hadith</string>


    <!-- Search -->
    <!-- Custom Action Bar Search -->
    <string name="search_cancel_button">Cancel</string>
    <string name="search_filter_title">Filter results</string>

    <!-- Bottomsheet Filter -->
    <string name="search_only_title">Search only</string>
    <string name="search_in_title">Search in</string>
    <string name="search_grade_title">Grades</string>
    <string name="search_book_translatedtext">Translated Hadith Text</string>
    <string name="search_book_arabictext">Arabic Hadith Text</string>
    <string name="search_book_number">Hadith Number</string>
    <string name="search_grade_sahih">Sahih</string>
    <string name="search_grade_daif">Daif</string>

    <!-- Preferences -->
    <!-- Preference Titles -->
    <string name="language_header">Language</string>
    <string name="appearance_header">Appearance</string>
    <string name="sync_header">Sync</string>

    <!-- Language Preferences -->
    <string name="language_title">Hadith language</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_bengali">Bengali</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_indonesian">Indonesian</string>
    <string name="language_tamil">Tamil</string>
    <string name="language_turkish">Turkish</string>
    <string name="language_urdu">Urdu</string>

    <!-- Appearance Preferences -->
    <string name="display_arabic">Display Arabic Text</string>
    <string name="display_translation">Display Translation Text</string>
    <string name="textsize_arabic">Arabic Text Size</string>
    <string name="textsize_translation">Translation Text Size</string>

    <!-- Contact us Preference -->
    <string name="contact_us">If you found any error, please email us</string>

    <string name="no_translation">No Translation Available</string>
</resources>