<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language_header">

        <EditTextPreference
            app:key="signature"
            app:title="THIS APP IS STILL IN BETA"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="eng"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_header">

        <CheckBoxPreference
            app:key="display_arabic"
            app:title="@string/display_arabic"
            app:defaultValue="true"
            />

        <CheckBoxPreference
            app:key="display_translation"
            app:title="@string/display_translation"
            app:defaultValue="true"
            />

        <SeekBarPreference
            app:key="textsize_arabic"
            app:title="@string/textsize_arabic"
            app:defaultValue="20"
            app:showSeekBarValue="true"/>

        <SeekBarPreference
            app:key="textsize_translation"
            app:title="@string/textsize_translation"
            app:defaultValue="20"
            app:showSeekBarValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="If you found any error, please email us">

        <Preference
            app:key="signature"
            app:title="islamictechapps@googlemail.com"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>