<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottomsheet_background"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/title_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/search_filter_title"
                android:layout_centerVertical="true"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/closeBottomsheetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?attr/backgroundColor"
                android:src="@drawable/symbol_close" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/search_only_title"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_book_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_book_number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/search_in_title"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBukhari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bukhari_book" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMuslim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/muslim_book" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNasai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nasai_book" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAbudawud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abudawud_book" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonTirmidhi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tirmidhi_book" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonIbnmajah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ibnmajah_book" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMalik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/malik_book" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/search_grade_title"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSahih"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_grade_sahih" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDaif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_grade_daif" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>