<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/intro_books"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hadith Books"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/backgroundColor"
            app:layout_constraintBottom_toBottomOf="@id/prayerConstraint"
            app:layout_constraintTop_toTopOf="@id/prayerConstraint"
            app:cardElevation="0dp"
          >


            <ScrollView
                android:id="@+id/scrollViewToday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/prayerConstraint"
                app:layout_constraintTop_toTopOf="@+id/prayerConstraint">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:text="@string/bukhari_book"
                            android:gravity="center"
                            android:textSize="20dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:text="@string/muslim_book"
                            android:gravity="center"
                            android:textSize="20dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/nasai_book"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/abudawud_book"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/tirmidhi_book"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/ibnmajah_book"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/malik_book"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</LinearLayout>