<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hadithRecyclerViewItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundColor">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hadithConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp">

            <RelativeLayout
                android:id="@+id/relativeLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    app:cardElevation="1dp"
                    app:strokeWidth="0dp">

                    <TextView
                        android:id="@+id/hadithNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="2"
                        android:textSize="20sp"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/copyCardView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    app:strokeWidth="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/symbol_copy" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/bookmarkCardView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_toStartOf="@id/copyCardView"
                    android:layout_centerVertical="true"
                    app:strokeWidth="0dp">

                    <ImageView
                        android:id="@+id/bookmarkIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/symbol_bookmark_off" />
                </com.google.android.material.card.MaterialCardView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/hadithNameArabicLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayoutTitle">


            <TextView
                android:id="@+id/hadithNameArabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="Arabic Hadith name"
                android:fontFamily="@font/uthman"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/hadithNameEnglishLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hadithNameArabicLayout">


            <TextView
                android:id="@+id/hadithNameEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="Translation Hadith name"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            </RelativeLayout>
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/gradeDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/gradesLinearLayout"
                app:layout_constraintTop_toBottomOf="@id/hadithNameEnglishLayout" />

            <LinearLayout
                android:id="@+id/gradesLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/gradeDivider">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:cardBackgroundColor="?attr/colorSurface"
                    app:strokeWidth="0dp"
                   app:cardCornerRadius="5dp">



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:selectableItemBackground">

                    <TextView
                        android:id="@+id/gradesTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/search_grade_title"
                        android:gravity="center_vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/gradesImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_arrow_downward_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <RelativeLayout
                    android:id="@+id/expandable_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/child_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/referenceDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/gradesLinearLayout" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/referenceDivider">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/referenceTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/reference" />

                    <TextView
                        android:id="@+id/referenceText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="Sahih Bukhari 60"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/referenceBookTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/reference_book" />

                    <TextView
                        android:id="@+id/referenceBookText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="Book 1, Hadith 1"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>